# qingbird-code

./: .gitignore  .review-all.diff  .review-fixes-brief.md  11d1277d74ef.events.jsonl  11d1277d74ef.json  11d1277d74ef.jsonl  3e67b50e88a0.events.jsonl  7159a4f705a9.events.jsonl  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  QINGBIRDD_PROJECT_PATH  README.en.md  README.md  WORKLOG.md  b1a1e8bde3c0.events.jsonl  b3fe66dbbe7a.events.jsonl  b3fe66dbbe7a.json  eflow.yaml  file-history.json  qingbird.yaml  sessions-index.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: check-trait-stability.yml  ci.yaml
.qbirdd/tool-output/: tool_1782478365_Read.txt
.reasonix/: desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
.superpowers/: task-1-brief.md  task-2-brief.md  task-3-brief.md  task-4-brief.md
.superworks/: task-1-report.md  task-1-review.diff  task-11-brief.md  task-11-report.md  task-12-14-brief.md  task-12-14-report.md  task-15-18-brief.md  task-15-18-report.md  task-19-23-brief.md  task-19-23-report.md  task-2-report.md  task-2-review.diff  task-3-report.md  task-3-review.diff  task-4-report.md  task-4-review.diff  task-5-6-7-brief.md  task-5-6-7-report.md  task-5-7-review.diff  task-8-10-brief.md  task-8-10-report.md
crates/qbird-code/: Cargo.toml
crates/qbird-code-agents/: Cargo.toml
crates/qbird-code-agents/src/: delegate_task.rs  doom_loop.rs  lib.rs  nudge.rs  react_loop.rs  subagent.rs  subagent_pool.rs
crates/qbird-code-agents/src/react_loop/: hooks.rs  loop.rs  mod.rs  types.rs
crates/qbird-code-agents/src/skill/: mod.rs  registry.rs  types.rs
crates/qbird-code-agents/src/skill/sdd/: archive.rs  mod.rs  proposal.rs  review_quality.rs  review_spec.rs
crates/qbird-code-agents/src/subagent/: config.rs  executor.rs  mod.rs  profile.rs
crates/qbird-code-agents/tests/: delegate_task_integration_test.rs  delegate_task_test.rs  executor_subagent_test.rs  react_loop_with_mock_test.rs  sdd_state_machine_test.rs  subagent_config_test.rs  subagent_profile_test.rs
crates/qbird-code-infra/: Cargo.toml
crates/qbird-code-infra/src/: config.rs  config_validate.rs  env.rs  event.rs  http_client.rs  lib.rs  locale.rs  profile.rs  runtime_overrides.rs
crates/qbird-code-infra/src/memory/: budgeted_read.rs  context_manager.rs  memory_manager.rs  mod.rs  overflow.rs  session_store.rs  tokenizer.rs  types.rs
crates/qbird-code-infra/src/providers/: anthropic.rs  deepseek.rs  deepseek_anthropic.rs  mod.rs  ollama.rs  openai.rs  stream.rs  stream_format.rs  stream_parser.rs
crates/qbird-code-infra/tests/: cleanup_extra_test.rs  cleanup_throttle_test.rs  config_validate_extra_test.rs  config_validate_test.rs  config_validation_ui_test.rs  context_manager_integration_test.rs  cost_config_test.rs  cost_extra_test.rs  http_client_retry_test.rs  locale_test.rs  memory_manager_path_test.rs  memory_recall_test.rs  memory_test.rs  profile_extra_test.rs  profile_test.rs  provider_slash_test.rs  runtime_overrides_extra_test.rs  runtime_overrides_test.rs  sample_profiles_test.rs  session_store_extra_test.rs  session_store_test.rs  stream_parser_test.rs  usage_cache_hit_test.rs
crates/qbird-code-models/: Cargo.toml
crates/qbird-code-models/src/: error.rs  lib.rs  message.rs  types.rs
crates/qbird-code-models/tests/: error_user_message_test.rs  models_test.rs
crates/qbird-code-tools/: Cargo.toml
crates/qbird-code-tools/src/: command.rs  edit.rs  file.rs  glob.rs  lib.rs  list_dir.rs  registry.rs  search.rs  undo_stack.rs  web_fetch.rs
crates/qbird-code-tools/tests/: edit_extra_test.rs  edit_test.rs  registry_profile_test.rs  risk_threshold_test.rs  tools_test.rs
crates/qbird-code/src/: lib.rs  main.rs
crates/qbird-code/tests/: cli_profile_test.rs  cli_test.rs  edit_undo_e2e_test.rs  help_command_test.rs  ollama_smoke_test.rs  session_lifecycle_e2e_test.rs  v03_e2e_test.rs
docs/: analysis-2026-06-24-eflow-polish.md  architecture.md  cli-contract.md  cli.md  configuration.md  eflow-archive.bundle  manual-verification-v1.3.1.md  migration-v1.2-to-v1.3.md  profiles.md  refactoring-plan.md
docs/adr/: 0017-zero-hardcode-rendering.md  0018-v0.1.0-deepseek-only-restructure.md
docs/examples/providers/: README.md  agnes-ai.yaml  anthropic.yaml  deepseek.yaml  minimax.yaml  openai.yaml  opencode-go.yaml
docs/superpowers/plans/: 2026-06-15-eflow-v1.0-implementation-plan.md  2026-06-15-eflow-v1.1-implementation-plan.md  2026-06-17-eflow-v1.2-implementation-plan.md  2026-06-17-eflow-v1.3.0-llm-abstract-plan.md  2026-06-17-eflow-v1.3.1-wizard-slash-plan.md  2026-06-17-eflow-v1.3.2-cli-contract-plan.md  2026-06-17-eflow-v1.3.3-workflow-levels-plan.md  2026-06-18-eflow-v1.4-rendering-pipeline-plan.md  2026-06-23-v1.4-cli-config-plan.md  2026-06-24-qingbird-v0.1.0-plan.md  (+6 more)
locales/: en-US.yml  zh-CN.yml
profiles/: developer.yaml
src/: lib.rs  main.rs
src.v0.1.bak/application/: concierge.rs  mod.rs  orchestrator.rs
src.v0.1.bak/capability/: blackboard.rs  decisioner.rs  executor.rs  feedbacker.rs  pool.rs
src.v0.1.bak/cli/: config.rs  mod.rs  prompt.rs  start.rs  stdin.rs
src.v0.1.bak/common/: mod.rs
src.v0.1.bak/infrastructure/: event.rs  mod.rs
src.v0.1.bak/interaction/: mod.rs  tui.rs
src/application/: concierge.rs  orchestrator.rs
src/capability/: blackboard.rs  decisioner.rs  executor.rs  feedbacker.rs  mod.rs  pool.rs  subagent.rs
src/cli/: config.rs  error.rs  init.rs  mod.rs  output.rs  prompt.rs  start.rs  stdin.rs
src/cli/handlers/: end.rs  (+4 more)
src/common/: env.rs  error.rs  types.rs
src/infrastructure/: config.rs  event.rs  locale.rs  mod.rs  profile.rs
src/interaction/: cli.rs  layer.rs  mod.rs  tui.rs
src/workflow/: builtin.rs  mod.rs
tests/: capability_test.rs  cli_test.rs  concierge_test.rs  config_test.rs  context_test.rs  event_test.rs  gui_smoke_test.py  i18n_test.rs  integration_test.rs  memory_test.rs  orchestrator_test.rs  parallel_execution_test.rs  pool_test.rs  profile_test.rs  tools_test.rs
tests/fixtures/: mock_config.yaml
(+100 files in other folders)
