[package]
name = "qbird-code-agents"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
qbird-code-models.workspace = true
qbird-code-infra.workspace = true
qbird-code-tools.workspace = true

tokio.workspace = true
async-trait.workspace = true
serde_json.workspace = true
serde.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
futures-util.workspace = true
