[package]
name = "qbird-code-infra"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
qbird-code-models.workspace = true

async-trait.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
chrono.workspace = true
dirs.workspace = true
tracing.workspace = true
uuid.workspace = true
regex-lite.workspace = true
rust-i18n.workspace = true
reqwest.workspace = true
