[package]
name = "qbird-code-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
qbird-code-models.workspace = true

serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
uuid.workspace = true
walkdir.workspace = true
regex-lite.workspace = true
tracing.workspace = true
rust-i18n.workspace = true
