[package]
name = "qbird-code"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "qingbird"
path = "src/main.rs"

[dependencies]
qbird-code-models.workspace = true
qbird-code-infra.workspace = true
qbird-code-tools.workspace = true
# qbird-code-agents 尚未创建，先不加

tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
